# box

./: .editorconfig  .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: integration_tests.yml  release.yml  release_on_pypi.yml  tests.yml  unit.yml
docs/: changelog.md  cli.md  examples.md  guide.md  index.md  tips.md
docs/.includes/: build.md  install.md  installer_cli.md  installer_gui.md
src/box/: cleaner.py  cli.py  config.py  env_vars.py  formatters.py  initialization.py  installer.py  packager.py  utils.py
src/box/installer_utils/: linux_cli.py  linux_gui.py  linux_hlp.py  mac_hlp.py  windows_hlp.py
src/boxer/: __init__.py  cleaner.py  cli.py  config.py  initialization.py  packager.py  utils.py
tests/: __init__.py  conftest.py  test_box.py
tests/cli/: test_box.py  test_boxer.py  test_cli_clean.py  test_cli_env.py  test_cli_initialization.py  test_cli_installer.py  test_cli_packager.py  test_cli_uninitialize.py
tests/data/pyapp-v0.14.0/: source.txt
tests/func/: test_config.py  test_initialization.py  test_packager.py  test_utils.py
tests/unit/: test_config.py  test_cowsay.py  test_initialization.py  test_installer.py  test_packager.py  test_qtcowsay.py  test_utils.py
tmp/: README.md  pyproject.toml
tmp/src/tmp/: __init__.py
