[project]
name = "tmp"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[project.scripts]
hello = "tmp:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tmp"]

[tool.box]
builder = "rye"
app_entry = "tmp:hello"
